--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,7 +32,7 @@
         <h1>Заполните форму</h1>
         <h4>чтобы получить бесплатную<br>
             консультацию специалиста</h4>
-        <input type="hidden" name="login" id="login" value="test" />
+        <!-- <input type="hidden" name="login" id="login" value="test" /> -->
         <input type="text" placeholder="Ваше имя*" name="name" id="name" maxlength="100" />
         <input type="text" placeholder="Ваш телефон*" name="phone" id="phone" maxlength="100" />
         <input type="text" placeholder="Ваш Email" name="email" id="email" maxlength="100" />
