--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,12 +2,19 @@
 <div class="header-background"></div>
 
 <header class="header">
-    <h1 class="services">Геодезические услуги</h1>
+    <h1 class="services">Выполнение инженерно-геодезических работ</h1>
     <span class="ooo">ООО "Геометрикс"</span>
     <p class="foundation">Основана в 2012 году</p>
-    <img class="logo" src="assets/logo.png" alt="logo">
-    <p class="phone">+79081903754</p>
-    <p class="whatsapp">+79044478596<br>&nbsp;&nbsp;&nbsp;whatsapp</p>
+    <img class="logo" src="assets/l.png" alt="logo">
+    <img class="logo-mini" src="assets/logo.png" alt="logo">
+
+    <p class="email">geometrix61@mail.ru</p>
+    <p class="phone">
+        <img src="assets/img/social/phone.png" alt="phone"> +79081903754<br>
+        <img src="assets/img/social/phone.png" alt="phone"> +79286074999</p>
+    
+    <p class="whatsapp">
+        <img src="assets/img/social/wa.png" alt="phone"> +79044478596</p>
 </header>
 
 <div class="hr"></div>
