--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,3 +1,9 @@
+
+@font-face {
+    font-family: 'ISOCPEUR'; 
+    src: url('/assets/fonts/ttf/ISOCPEUR.ttf'); 
+}
+
 $light-yellow: rgb(255,196,14);
 $yellow: rgb(212,158,74);
 $dark: rgb(47,69,91);
@@ -42,82 +48,146 @@ h1 {
     height: $height-header;
     .ooo {
         position: fixed;
-        top: 10px;
-        left: 25px;
+        top: 8px;
+        left: 115px;
         z-index: $z-index-header;
         font-size: large;
+        font-size: 1.5rem;
     }
     .logo {
+        width: 250px;
+        position: fixed;
+        left: 100px;
+        z-index: $z-index-header;
+    }
+    .logo-mini {
         width: 100px;
         position: fixed;
-        left: 50px;
+        left: 30px;
         z-index: $z-index-header;
+        display: none;
     }
     .foundation {
         position: fixed;
         top: 120px;
-        left: 25px;
+        left: 115px;
         z-index: $z-index-header;
+        font-size: 1.5rem;
     }
     .services {
         position: fixed;
         top: 50px;
         z-index: $z-index-header;
+        width: 650px;
+        color: lightseagreen;
+        text-align: center;
     }
-    .phone, .whatsapp {
+    .phone, .whatsapp, .email {
+        font-family: ISOCPEUR, Arial, Helvetica, sans-serif;
         position: fixed;
-        right: 50px;
+        right: 100px;
         z-index: $z-index-header;
         font-size: 1.5rem;
     }
-    .phone {
-        top: 20px;
+    .email {
+        top: 10px;
     }
+    .phone {
+        img{
+            width: 20px;
+        }
+        top: 50px;
+    }    
     .whatsapp {
-        top: 90px;
+        img{
+            width: 20px;
+        }
+        top: 110px;
     }
 }
-@media (max-width: 600px) {
+@media (max-width: 1375px) {
     .header {
+        .ooo, .foundation {
+            left: 70px;
+        }
         .logo {
-            left: 20px;
+            left: 55px;
         }
         .services {
-            left:150px;
+            width: 400px;
+            top: 40px;
         }        
+        .phone, .whatsapp, .email {
+            right: 55px;
+        }
     }
 }
-@media (max-width: 475px) {
+@media (max-width: 1060px) {
     .header {
-        .logo {
-            left: 5px;
+        .ooo, .foundation {
+            left: 25px;
         }
+        .logo {
+            left: 10px;
+        }
+        .phone, .whatsapp, .email {
+            right: 10px;
+        }
+    }
+}
+@media (max-width: 900px) {
+    .header {
+        .services {
+            left:250px;
+        }
+    }
+}
+@media (max-width: 820px) {
+    .header {
+        .services {
+            left:300px;
+            top: 15px;
+            width: 200px;
+            line-height: 0.9em;
+        }
+    }
+}
+@media (max-width: 750px) {
+    .header {
+        .services {
+            left:270px;
+        }
+    }
+}
+@media (max-width: 690px) {
+    .header {
         .services {
             display: none;
         }
     }
 }
-@media (max-width: 410px) {
+@media (max-width: 500px) {
     .header {
-        .phone, .whatsapp {
-            right: 10px;
-            font-size: 1.2rem;
+        .logo-mini {
+            display: block;
         }
-    }
-}
-@media (max-height: 700px) {
-    .header {
+        .logo {
+            display: none;
+        }
         .ooo, .foundation {
             display: none;
         }
         .services {
             top: 30px;
         }
+        .email {
+            top: 0;
+        }
         .phone {
-            top: 10px;
+            top: 25px;
         }
         .whatsapp {
-            top: 45px;
+            top: 75px;
         }        
         height: $height-header-min;
     }
@@ -127,9 +197,56 @@ h1 {
     .hr {
         top: $height-header-min;
     }
-    @media (max-width: 700px) {
-        .services {
+}
+@media (max-width: 500px) {
+    .header {
+        .logo-mini {
+            left: 10px;
+        }
+    }
+}
+
+// высота
+@media (max-height: 700px) {
+    .header {
+        .ooo, .foundation {
             display: none;
+        }
+        .services {
+            top: 30px;
+        }
+        .email {
+            top: 0;
+        }
+        .phone {
+            top: 25px;
+        }
+        .whatsapp {
+            top: 75px;
+        }        
+        height: $height-header-min;
+    }
+    .header-background {
+        height: $height-header-min;
+    }
+    .hr {
+        top: $height-header-min;
+    }
+
+    @media (max-width: 1375px) {
+        .header {
+            .services {
+                top: 20px;
+                line-height: 0.9em;
+            }
+        }
+    }
+    @media (max-width: 820px) {
+        .header {
+            .services {
+                top: 10px;
+                font-size: 1.5rem;
+            }
         }
     }
 }
