add in block why-are-we text about company

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -52,6 +52,23 @@
 </div>
 
 
+<div class="why-are-we">
+    <!-- <h1>why-are-we</h1> -->
+    
+    <h1>О компании</h1> 
+    <div>
+        <p>ООО «Геометрикс» — топографо-геодезическая компания, основанная в 2012 г. группой выпускников факультета “Прикладная геодезия” Ростовского государственного строительного университета.</p>
+        <p>Мы выполняем все виды геодезических работ на территории г. Ростова-на-Дону и Ростовской области, а также других регионов Российской Федерации.</p>
+        <p>Производственная деятельность компании, в первую очередь, связана с выполнением инженерно-геодезических изысканий под строительство.</p>
+        <p>Материально-техническая база организации и квалификация сотрудников позволяет при выполнении геодезических изысканий строго соблюдать требования законодательства Российской Федерации, нормативных технических документов.</p>
+        <p>Использование современных приборов и технологий позволяет нашей фирме оперативно выполнять работы по любому заказу.</p>
+        <p>В число наших заказчиков входят строительные и проектные компании, промышленные предприятия, муниципальные и коммерческие организации, а также частные лица.</p>
+    </div>
+
+</div>
+
+
+
 <div class="about-photo">
     <p>Мы предлагаем:</p>
     <div class="container">
@@ -100,6 +117,7 @@
 
 <div class="reason">
     <h1>Почему именно мы?</h1>
+    
     <div class="reason-one">
         <h3>Почему мы?</h3>
         <p>Потому что</p>
@@ -140,11 +158,6 @@
     </div>
 </div>
 </div>
-
-<div class="why-are-we">
-    <h1>why-are-we</h1>
-</div>
-
 
 
 <div class="scheme">
