--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -406,6 +406,53 @@ h1 {
 
 
 // ------------------
+// .why-are-we
+// ------------------
+.why-are-we {
+    // width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+
+    // height: $height-block;
+    min-height: 400px;
+    background: $light-yellow;
+    color: $white;
+
+//     visibility: hidden;
+//     display: none;
+    h1 {
+        // width: 100%;
+        // display: flex;
+        padding: 20px;
+    }
+    p {
+        font-size: 1.2rem;
+        // padding: 20px;
+    }
+}
+@media (min-width: 1000px) {
+    .why-are-we { 
+        div {
+            width: 70%;
+        }
+    }
+}
+@media (max-width: 500px) {
+    .why-are-we {
+        padding: 10px;
+        div {
+            padding-bottom: 50px;
+        }
+    }    
+}
+//----------------------------------
+
+
+
+// ------------------
 // .promo
 // ------------------
 .promo {
@@ -428,8 +475,8 @@ h1 {
 // .about-photo
 // ------------------
 .about-photo {
-    // background: $white;
-    background: $light-yellow;
+    background: $white;
+    // background: $light-yellow;
     position: relative;
     width: 100%;
     display: flex;
@@ -539,7 +586,8 @@ h1 {
 
     // height: $height-block;
     height: 400px;
-    background: $white;
+    // background: $white;
+    background: $light-yellow;
 
     // visibility: hidden;
     // display: none;
@@ -701,25 +749,6 @@ h1 {
 }
 //----------------------------------
 
-
-// ------------------
-// .why-are-we
-// ------------------
-.why-are-we {
-    // width: 100%;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-
-    // height: $height-block;
-    height: 400px;
-    background: $yellow;
-    color: $white;
-
-    visibility: hidden;
-    display: none;
-}
-//----------------------------------
 
 // ------------------
 // .scheme
