--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -57,12 +57,12 @@
     
     <h1>О компании</h1> 
     <div>
-        <p>ООО «Геометрикс» — топографо-геодезическая компания, основанная в 2012 г. группой выпускников факультета “Прикладная геодезия” Ростовского государственного строительного университета.</p>
-        <p>Мы выполняем все виды геодезических работ на территории г. Ростова-на-Дону и Ростовской области, а также других регионов Российской Федерации.</p>
-        <p>Производственная деятельность компании, в первую очередь, связана с выполнением инженерно-геодезических изысканий под строительство.</p>
-        <p>Материально-техническая база организации и квалификация сотрудников позволяет при выполнении геодезических изысканий строго соблюдать требования законодательства Российской Федерации, нормативных технических документов.</p>
-        <p>Использование современных приборов и технологий позволяет нашей фирме оперативно выполнять работы по любому заказу.</p>
-        <p>В число наших заказчиков входят строительные и проектные компании, промышленные предприятия, муниципальные и коммерческие организации, а также частные лица.</p>
+        <p>&nbsp;&nbsp;&nbsp;ООО «Геометрикс» — топографо-геодезическая компания, основанная в 2012 г. группой выпускников факультета “Прикладная геодезия” Ростовского государственного строительного университета.</p>
+        <p>&nbsp;&nbsp;&nbsp;Мы выполняем все виды геодезических работ на территории г. Ростова-на-Дону и Ростовской области, а также других регионов Российской Федерации.</p>
+        <p>&nbsp;&nbsp;&nbsp;Производственная деятельность компании, в первую очередь, связана с выполнением инженерно-геодезических изысканий под строительство.</p>
+        <p>&nbsp;&nbsp;&nbsp;Материально-техническая база организации и квалификация сотрудников позволяет при выполнении геодезических изысканий строго соблюдать требования законодательства Российской Федерации, нормативных технических документов.</p>
+        <p>&nbsp;&nbsp;&nbsp;Использование современных приборов и технологий позволяет нашей фирме оперативно выполнять работы по любому заказу.</p>
+        <p>&nbsp;&nbsp;&nbsp;В число наших заказчиков входят строительные и проектные компании, промышленные предприятия, муниципальные и коммерческие организации, а также частные лица.</p>
     </div>
 
 </div>
