--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -401,6 +401,13 @@ h1 {
         }
     }
 }
+
+.ng-valid[required], .ng-valid.required  {
+    border: 2px solid #42A948;
+}  
+.ng-invalid  {
+    border: 2px solid #a94442;
+}
 //----------------------------------
 
 
