--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -79,7 +79,8 @@ h1 {
         top: 50px;
         z-index: $z-index-header;
         width: 650px;
-        color: lightseagreen;
+        // color: lightseagreen;
+        color: $dark;
         text-align: center;
     }
     .phone, .whatsapp, .email {
@@ -281,7 +282,8 @@ h1 {
     h3 {
         padding: 0 15px;
         background: rgba(189, 189, 189, 0.3);
-        color: rgb(0, 0, 0);
+        // color: rgb(0, 0, 0);
+        color: $dark;
         position: absolute;
         top: 120px;
         // left: 10px;
@@ -340,9 +342,11 @@ h1 {
     .form {
         z-index: 1;
         position: absolute;
-        // left: 200px;
-        // top: 100px;
-        background: rgba(158, 158, 158, 0.6);
+        // background: rgba(158, 158, 158, 0.6);
+        border-top-right-radius: 30px;
+        border-bottom-left-radius: 30px;
+        background: rgba(47,69,91,0.8);
+        color: $white;
         width: 300px;
         height: 450px;
         padding: 20px;
@@ -356,6 +360,10 @@ h1 {
             margin: 20px 20px 0 20px;
         }
         button {
+            // background: rgb(173, 173, 173);
+            // color: white;
+            border-top-right-radius: 10px;
+            border-bottom-left-radius: 10px;
         }
     }
     .instrument {
@@ -395,26 +403,13 @@ h1 {
 .ng-valid[required], .ng-valid.required  {
     border: 2px solid #42A948;
 }  
-.ng-invalid  {
+.ng-invalid:not(.form)  {
     border: 2px solid #a94442;
 }
 //----------------------------------
 
 
 // TOAST - всплывающее сообщение
-.fon {
-    
-    z-index: 1000;
-    background: white;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    opacity: 0.8;
-    display: none;
-    // visibility: hidden;
-}
 .toast {
     display: flex;
     align-items: center;
@@ -422,6 +417,7 @@ h1 {
     z-index: 1001;
     width: 100%;
     height: 100%;
+    background: rgba(175, 175, 175, 0.8);
     
     position: fixed;
     top: 0;
@@ -437,7 +433,7 @@ h1 {
         justify-content: center;
         width: 300px;
         height: 200px;
-        background: rgb(224, 224, 224);
+        background: rgb(248, 248, 248);
         border-radius: 5px;
         opacity: 1;
         h1 {
@@ -456,28 +452,19 @@ h1 {
 // .why-are-we
 // ------------------
 .why-are-we {
-    // width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 50px;
-
-    // height: $height-block;
     min-height: 400px;
     background: $light-yellow;
     color: $white;
-
-//     visibility: hidden;
-//     display: none;
     h1 {
-        // width: 100%;
-        // display: flex;
         padding: 20px;
     }
     p {
         font-size: 1.2rem;
-        // padding: 20px;
     }
 }
 @media (min-width: 1000px) {
@@ -508,7 +495,6 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     height: $height-block;
     background: $light-yellow;
     color: $white;
@@ -534,10 +520,55 @@ h1 {
         top: 100px;
         font-size: 2rem;
     }
+    #card1 {
+        display: block;
+        // visibility: visible;
+        // transition: .5s;
+        // opacity: 1;
+    }
+    #card2 {
+        display: block;
+        // visibility: visible;
+        // transition: .5s;
+        // opacity: 1;
+    }
+    #card3 {
+        display: block;
+        // visibility: visible;
+        // transition: .5s;
+        // opacity: 1;
+    }
+    .arrow-left {
+        z-index: 2;
+        position: absolute;
+        top: 40%;
+        left: 0;
+        opacity: 0.5;
+
+        display: none;
+
+        img {
+            width: 50px;
+            cursor: pointer;
+        }        
+    }
+    .arrow-right {
+        z-index: 2;
+        position: absolute;
+        top: 40%;
+        right: 0;
+        opacity: 0.5;
+
+        display: none;
+
+        img {
+            width: 50px;
+            cursor: pointer;
+        }        
+    }
 }
 .about-photo .container {
     height: 600px;
-    // background: rgba(236, 236, 236, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -566,7 +597,6 @@ h1 {
             }
         }
         .face.face2 {
-            // background: rgba(255, 255, 255, 0.5);
             display: flex;
             justify-content: center;
             align-items: center;            
@@ -578,7 +608,6 @@ h1 {
                 left: 0;
                 font-size: 1rem;
                 padding: 10px;
-                // width: 100%;
             }
         }
     }
@@ -589,34 +618,70 @@ h1 {
         transform: translateY(0) rotateX(0deg);
     }
 }
-@media (max-width: 1000px) {
-    .card3 {
-        visibility: hidden;
-        display: none;
-    }
+@media (max-width: 1000px) {    
     .about-photo {
-        .container {
+        .container {            
             height: 500px;
+            #card1 {
+                display: block;
+                // visibility: visible;
+                // opacity: 1;
+            }
+            #card2 {
+                display: block;
+                // visibility: visible;
+                // opacity: 1;
+            }
+            #card3 {
+                display: none;
+                // visibility: hidden;
+                // opacity: 0;
+            }
         }
         p {
             top: 50px;
         }
+        .arrow-left {    
+            display: block;
+        }
+        .arrow-right {    
+            display: block;
+        }
     }
 }
-@media (max-width: 700px) {
-    .card2 {
-        visibility: hidden;
-        display: none;
-    }
-    .about-photo {
+@media (max-width: 700px) {    
+    .about-photo {        
         .container {
             height: 400px;
+            #card1 {
+                display: block;
+                // visibility: visible;
+                // opacity: 1;
+            }
+            #card2 {
+                display: none;
+                // visibility: hidden;
+                // opacity: 0;
+            }
+            #card3 {
+                display: none;
+                // visibility: hidden;
+                // opacity: 0;
+            }
         }
         p {
             top: 25px;
         }
+        .arrow-left {    
+            display: block;
+        }
+        .arrow-right {    
+            display: block;
+        }
     }
 }
+
+
 //----------------------------------
 
 
