add buttons in about-text block

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -170,21 +170,30 @@
 </div>
 
 <div class="about-text">
-<div class="box">
-    <h1>Виды работ:</h1>
-    <div class="about-text-one">
-        <h3>Межевание</h3>
-        <p>Комплекс мероприятий, который обеспечит быстрое, квалифицированное межевание земельного участка: уточнение границ, раздел, перераспределение, объединение, образование земельных участков. Опыт и профессиональные навыки наших специалистов гарантируют точность всех показателей.</p>
+
+    <div class="box">
+        <h1>Виды работ:</h1>
+        <div id="text1">
+            <h3>Межевание</h3>
+            <p>Комплекс мероприятий, который обеспечит быстрое, квалифицированное межевание земельного участка: уточнение границ, раздел, перераспределение, объединение, образование земельных участков. Опыт и профессиональные навыки наших специалистов гарантируют точность всех показателей.</p>
+        </div>
+        <div id="text2">
+            <h3>Топоплан</h3>
+            <p>Топографическая съемка местности – комплекс мероприятий в составе инженерных изысканий, направленный на создание планов местности или топографических карт для дальнейшего их использования строителями, военными, туристами и т.д. Выполнение топографической съемки, как правило, осуществляется на месте и результатом этого вида деятельности является топоплан определенного масштаба.</p>
+        </div>
+        <div id="text3">
+            <h3>Сопровождение</h3>
+            <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. «Геометрикс» предлагает вам комплексный подход к ее созданию. Все заботы о геодезии мы возьмем на себя!</p>
+        </div>
     </div>
-    <div class="about-text-two">
-        <h3>Топоплан</h3>
-        <p>Топографическая съемка местности – комплекс мероприятий в составе инженерных изысканий, направленный на создание планов местности или топографических карт для дальнейшего их использования строителями, военными, туристами и т.д. Выполнение топографической съемки, как правило, осуществляется на месте и результатом этого вида деятельности является топоплан определенного масштаба.</p>
+
+    <div (click)="arrowLeftTwo()" class="arrow-left">
+        <img src="assets/img/buttons/arrow-left.png" alt="arrow-left">
     </div>
-    <div class="about-text-three">
-        <h3>Сопровождение</h3>
-        <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. «Геометрикс» предлагает вам комплексный подход к ее созданию. Все заботы о геодезии мы возьмем на себя!</p>
+    <div (click)="arrowRightTwo()" class="arrow-right">
+        <img src="assets/img/buttons/arrow-right.png" alt="arrow-right">
     </div>
-</div>
+
 </div>
 
 
