--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -229,7 +229,7 @@
         <h4>Кочкин Алексей Евгеньевич</h4>
         <br>
         <p>Юридический адрес:</p>
-        <p>&nbsp;&nbsp;&nbsp;344010, РФ, РО, г.Ростов-на-Дону, </p>
+        <p>&nbsp;&nbsp;&nbsp;344010, Россия, г.Ростов-на-Дону, </p>
         <p>&nbsp;&nbsp;&nbsp;ул.Нансена, д.148а, офис 109</p>
         <p>ОГРН: 1126194004100</p>
         <p>ИНН: 6168059100</p>
