edit color text

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -225,9 +225,10 @@
 <footer class="footer">
     <!-- <h1>footer</h1> -->
     <div class="director">
-        <p>Директор:</p>
+        <!-- <p>Директор:</p>
         <h4>Кочкин Алексей Евгеньевич</h4>
-        <br>
+        <br> -->
+        <h4>OOO "Геометрикс"</h4>
         <p>Юридический адрес:</p>
         <p>&nbsp;&nbsp;&nbsp;344010, Россия, г.Ростов-на-Дону, </p>
         <p>&nbsp;&nbsp;&nbsp;ул.Нансена, д.148а, офис 109</p>
