--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -144,19 +144,26 @@
 
 
 <div class="reason">
-    <h1>Почему именно мы?</h1>
+    <!-- <h1>Почему именно мы?</h1> -->
     
+    <h1>Почему Вы должны выбрать именно нас:</h1>
+
     <div class="reason-one">
-        <h3>Почему мы?</h3>
-        <p>Потому что</p>
+        <h3>У нас</h3>
+        <p>- Большой опыт работы в данной сфере</p>
+        <p>- Достойная репутация</p>
+        <p>- Индивидуальный подход к каждому клиенту</p>
     </div>
     <div class="reason-two">
-        <h3>Почему мы?</h3>
-        <p>Потому что</p>
+        <h3>Потому что мы</h3>
+        <p>- Cтрого придерживаемся установленных сроков исполнения</p>
+        <p>- Используем только современное геодезическое оборудование</p>
     </div>
     <div class="reason-three">
-        <h3>Почему мы?</h3>
-        <p>Потому что</p>
+        <h3>У нас</h3>
+        <p>- Доступные, честные цены</p>
+        <p>- К работе допускаются только сотрудники имеющие соответствующую подготовку</p>
+        <p>- Постоянный контроль качества на всех этапах работы</p>
     </div>
     <div class="reason-img-one">
         <img src="assets/reason-img-one.jpg" alt="reason-img-one">
