add images four pieces

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -60,6 +60,8 @@
     </form>
     <img class="instrument" src="assets/instrument.png" alt="instrument">
 
+    <img class="image2" src="assets/img/equipment/Image2.jpg" alt="Image2">
+
 </div>
 
 
@@ -85,12 +87,14 @@
         <p>&nbsp;&nbsp;&nbsp;В число наших заказчиков входят строительные и проектные компании, промышленные предприятия, муниципальные и коммерческие организации, а также частные лица.</p>
     </div>
 
+    <img class="image1" src="assets/img/equipment/Image1.png" alt="Image1">
+
 </div>
 
 
 
 <div class="about-photo">
-    <p>Мы предлагаем:</p>
+    <h1>Мы предлагаем:</h1>
     <div class="container">
         <div class="card card1" id="card1">
             <div class="face face1">
@@ -140,6 +144,8 @@
         <img src="assets/img/buttons/arrow-right.png" alt="arrow-right">
     </div>
 
+    <img class="image3" src="assets/img/equipment/Image3.png" alt="Image3">
+
 </div>
 
 
@@ -148,23 +154,26 @@
     
     <h1>Почему Вы должны выбрать именно нас:</h1>
 
-    <div class="reason-one">
-        <h3>У нас</h3>
-        <p>- Большой опыт работы в данной сфере</p>
-        <p>- Достойная репутация</p>
-        <p>- Индивидуальный подход к каждому клиенту</p>
+    <div class="box">
+        <div class="reason-one">
+            <h3>У нас</h3>
+            <p>- Большой опыт работы в данной сфере</p>
+            <p>- Достойная репутация</p>
+            <p>- Индивидуальный подход к каждому клиенту</p>
+        </div>
+        <div class="reason-two">
+            <h3>Потому что мы</h3>
+            <p>- Cтрого придерживаемся установленных сроков исполнения</p>
+            <p>- Используем только современное геодезическое оборудование</p>
+        </div>
+        <div class="reason-three">
+            <h3>У нас</h3>
+            <p>- Доступные, честные цены</p>
+            <p>- К работе допускаются только сотрудники имеющие соответствующую подготовку</p>
+            <p>- Постоянный контроль качества на всех этапах работы</p>
+        </div>
     </div>
-    <div class="reason-two">
-        <h3>Потому что мы</h3>
-        <p>- Cтрого придерживаемся установленных сроков исполнения</p>
-        <p>- Используем только современное геодезическое оборудование</p>
-    </div>
-    <div class="reason-three">
-        <h3>У нас</h3>
-        <p>- Доступные, честные цены</p>
-        <p>- К работе допускаются только сотрудники имеющие соответствующую подготовку</p>
-        <p>- Постоянный контроль качества на всех этапах работы</p>
-    </div>
+
     <div class="reason-img-one">
         <img src="assets/reason-img-one.jpg" alt="reason-img-one">
     </div>
@@ -200,6 +209,8 @@
     <div (click)="arrowRightTwo()" class="arrow-right">
         <img src="assets/img/buttons/arrow-right.png" alt="arrow-right">
     </div>
+
+    <img class="image4" src="assets/img/equipment/Image4.png" alt="Image4">
 
 </div>
 
