--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -60,7 +60,7 @@
     </form>
     <img class="instrument" src="assets/instrument.png" alt="instrument">
 
-    <img class="image2" src="assets/img/equipment/Image2.jpg" alt="Image2">
+    <img class="image2" src="assets/img/equipment/Image4.png" alt="image">
 
 </div>
 
@@ -210,7 +210,7 @@
         <img src="assets/img/buttons/arrow-right.png" alt="arrow-right">
     </div>
 
-    <img class="image4" src="assets/img/equipment/Image4.png" alt="Image4">
+    <img class="image4" src="assets/img/equipment/Image2.jpg" alt="image">
 
 </div>
 
